# MultiDisplayHelper

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mouse_controller.cpp  mouse_controller.h  readme.md  screen_capturer.cpp  screen_capturer.h  screen_widget.cpp  screen_widget.h
